add_subdirectory(fssimplewindow/src)
add_subdirectory(yssimplesound/src)
add_subdirectory(yssimplesound/sample_fssimplewindow)
add_subdirectory(genwave)
add_subdirectory(carmenoverture)
add_subdirectory(farandol)
add_subdirectory(moonlight)
add_subdirectory(mozart_piano_sonata)
add_subdirectory(mozart_two_pianos)
add_subdirectory(error_handling)
